prevent dividing line below marquee on mobile

--- a/express/code/blocks/content-toggle/content-toggle.css
+++ b/express/code/blocks/content-toggle/content-toggle.css
@@ -11,7 +11,6 @@ main .section[data-toggle]:not(.xxxl-spacing-static, .xxl-spacing-static, .xl-sp
 main .section .content-toggle-wrapper {
     margin: 0 auto;
     padding: 0 16px;
-    overflow: auto;
     max-width: max-content;
 }
 
